fix(security): Harden input sanitization and output encoding
- sanitizeForLog: replace naive \r\n\t regex with full Unicode control
  character, bidi override, and zero-width character stripping; add
  length truncation to prevent log flooding
- handleUpload: set explicit Content-Type on error response to prevent
  reflected XSS via crafted filenames
- sendHttpRedirect: reject absolute URLs, validate X-Forwarded-Proto/Host
  headers, block javascript:/data: schemes and CRLF injection

Signed-off-by: manticore-projects <andreas@manticore-projects.com>